[package]
name = "skim_switcher"
version = "0.1.0"
authors = ["kepet19 <kevinmeejach@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = "0.8.1"
[dependencies.i3ipc]
version = "0.10.1"
features = ["i3-4-14"]
