[package]
name = "skim_switcher"
version = "0.3.0"
authors = ["kepet19 <kevinmeejach@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
swayipc = {"version" = "*"}
skim = "*"
env_logger = "*"
log = "*"
